# rustyvibes

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: trimmer_splitter.rs
resources/: rustyvibes
resources/soundpacks/CherryMX Black ABS/: config.json
resources/soundpacks/CherryMX Black PBT/: config.json
resources/soundpacks/CherryMX Blue ABS/: config.json
resources/soundpacks/CherryMX Blue PBT/: config.json
resources/soundpacks/CherryMX Brown ABS/: config.json
resources/soundpacks/CherryMX Brown PBT/: config.json
resources/soundpacks/CherryMX Red ABS/: config.json
resources/soundpacks/CherryMX Red PBT/: config.json
resources/soundpacks/NK Cream/: config.json
resources/soundpacks/Topre Purple Hybrid PBT/: config.json
src/: args.rs  json.rs  keycode.rs  listen.rs  macos.rs  main.rs  play_sound.rs  start.rs
