[package]
name = "rustyvibes-gui"
description = "A rust GUI to play mechanical keyboard sounds globally"
readme = "README.md"
repository = "https://github.com/kb24x7/rustyvibes-gui"
keywords = ["mechanical", "keyboard", "keypress", "keyboard", "sound"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "^1.2"

[package.metadata.bundle]
name = "Rustyvibes"
identifier = "com.kunalbagaria.rustyvibes"
version = "0.0.1"
copyright = "Copyright (c) Kunal Bagaria. All rights reserved."
