[package]
name = "rustyvibes"
description = "A rust CLI to play mechanical keyboard sounds globally"
readme = "README.md"
repository = "https://github.com/kb24x7/rustyvibes"
keywords = ["mechanical", "keyboard", "keypress", "keyboard", "sound"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
version = "1.0.9"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = "0.5.1"
serde_json = "1.0.66"
serde = { version = "1.0.127", features = ["derive"] }
libc = "0.2.66"
rodio_wav_fix = "0.15.0"
once_cell = "1.8.0"
flume = "0.10.9"
clap = { version = "4.0.27", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
thread-priority = "0.2.4"
