[package]
name = "rustyvibes"
description = "A rust CLI to play mechanical keyboard sounds globally"
readme = "README.md"
repository = "https://github.com/kb24x7/rustyvibes"
keywords = ["mechanical", "keyboard", "keypress", "keyboard", "sound"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
version = "1.0.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = "0.5.3"
serde_json = "1.0.120"
serde = { version = "1.0.203", features = ["derive"] }
libc = "0.2.155"
rodio_wav_fix = "0.15.0"
once_cell = "1.19.0"
flume = "0.11.0"
clap = { version = "4.5.8", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
thread-priority = "1.1.0"
